2008-01-02  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/Simple/_SimpleTable.py (SimpleTable.row): added obj handlers
	* src/plugins/References.py: new quick report for listing refs

2008-01-02 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DbLoader.py: correct bug state -> dbstate

2008-01-02  Stéphane Charette <stephanecharette@gmail.com>
	* src/BaseDoc.py: definition of add_comment()
	* src/ReportBase/_GraphvizReportDialog.py: implement add_comment()
	* src/plugins/GVFamilyLines.py:
	* src/PluginUtils/__init__.py:
	* src/PluginUtils/_MenuOptions.py: work in progress to migrate the
	FamilyLines plugin to the new GraphViz framework; new menu option
	widget called "SurnameColourOption" (which is actually quite specific
	to the FamilyLines plugin)

2008-01-01  Peter Landgren <peter.talken@telia.com>
    * src/plugins/rel_sv.py: Added some comments

2008-01-01  Gary Burton <gary.burton@zen.co.uk>
	* src/Editors/_EditFamily.py: Enabled tooltips on person edit buttons
	bug #1501

2008-01-01  Brian Matherly <brian@gramps-project.org>
	* src/gramps_main.py:
	* src/PluginUtils/_MenuOptions.py:
	Refinement of "Center Person" selection for reports. Now only use one 
	dialog.