@@ -1,3 +1,6 @@
+2008-01-02 Benny Malengier <benny.malengier@gramps-project.org>
+	* src/Filters/SideBar/_PlaceSidebarFilter.py: correct string, bug #1275
+
 2008-01-02  Douglas S. Blank  <dblank@cs.brynmawr.edu>
 	* src/Simple/_SimpleTable.py (SimpleTable.row): added obj handlers
 	* src/plugins/References.py: new quick report for listing refs
